--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,7 +5,7 @@
         <button class="button button-icon ion-ios-loop-strong small-icon" ng-controller="YourBalCtrl" ng-click="dorefresh();"></button>
     </ion-nav-buttons>
 -->
-    <ion-header-bar class="bar-royal" align-title="center">
+    <ion-header-bar class="bar-royal">
         <div class="buttons button-left">
             <button class="button button-icon ion-navicon no-hide" menu-toggle="left">
             </button>
