--- a/www/templates/modal-form.html
+++ b/www/templates/modal-form.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-    <ion-header-bar class="bar-royal" align-title="center">
+    <ion-header-bar class="bar-royal">
         <h1 class="title">Checkout</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeform()">Close</button>
