--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -40,7 +40,7 @@
                     <div class="row text-center">
                         <div class="col">
                             <div class="balance bod-right">
-                                <h4 class="calm">{{pb.yourbalance.purchasebalance}}</h4>
+                                <h4 class="balanced">{{pb.yourbalance.purchasebalance}}</h4>
                                 <div class="label-name">
                                     Purchase Balance
                                 </div>
@@ -48,7 +48,7 @@
                         </div>
                         <div class="col">
                             <div class="balance">
-                                <h4 class="calm">{{pb.yourbalance.salesbalance}}</h4>
+                                <h4 class="balanced">{{pb.yourbalance.salesbalance}}</h4>
                                 <div class="label-name">
                                     Sell Balance
                                 </div>
