--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,8 +16,8 @@ $royal:                           #363435 !default;
 $dark:                            #444 !default;
 
 
-$font-family-sans-serif:          "PT Sans", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !default;
-$font-family-light-sans-serif:    "PT Sans", "HelveticaNeue-Light", "Roboto-Light", "Segoe UI-Light", sans-serif-light !default;
+$font-family-sans-serif:          "lato", "quicksand", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif !default;
+$font-family-light-sans-serif:    "lato", "quicksand", "HelveticaNeue-Light", "Roboto-Light", "Segoe UI-Light", sans-serif-light !default;
 
 $base-background-color:           #D2D2D2 !default;
 $base-color:                      #363435 !default;
