--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -3328,7 +3328,7 @@ body,
   color: #363435;
   word-wrap: break-word;
   font-size: 14px;
-  font-family: "PT Sans", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "lato", "quicksand", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -3566,7 +3566,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #363435;
   font-weight: 500;
-  font-family: "PT Sans", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "lato", "quicksand", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -5052,7 +5052,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "PT Sans", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "lato", "quicksand", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
   opacity: 0.7; }
   .tab-item:hover {
     cursor: pointer; }
@@ -6861,7 +6861,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "PT Sans", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
+  font-family: "lato", "quicksand", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
 
 .item-input {
   display: -webkit-box;
