--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,14 +1,28 @@
 /* Empty. Add your own CSS if you like */
 
 @font-face {
-    font-family: 'PT Sans';
-    src: url('../fonts/PT_Sans-Web-Regular.ttf');
+    font-family: 'quicksand';
+    src: url('../fonts/Quicksand-Regular.ttf');
 }
 
 @font-face {
-    font-family: 'PT Sans';
-    src: url('../fonts/PT_Sans-Web-Bold.ttf');
-    font-weight: bold;
+    font-family: 'quicksand';
+    src: url('../fonts/Quicksand-Bold.ttf');
+    font-weight: 700;
+}
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/Lato-Regular.ttf');
+}
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/Lato-Light.ttf');
+    font-weight: 300;
+}
+@font-face {
+    font-family: 'lato';
+    src: url('../fonts/Lato-Bold.ttf');
+    font-weight: 700;
 }
 
 .bg-xb {
