--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -69,30 +69,38 @@
                         {{profile.website}}
                     </div>
                 </ion-item>
+                <div class="mt20">
+                
                 <div class="item item-text-wrap header" ng-if="pic.length>0">
                     <h2>Shops Photos</h2>
                 </div>
                 <div class="row">
                     <div class="col input-div" ng-repeat="p in pic" ng-click="openshop($index);">
-                        <div class="img-profile">
-                            <img ng-src="{{p.photo|serverimage}}">
-                        </div>
+                    
+                        <div class="image-hold" ng-style="{'background-image':'url({{p.photo|serverimage}})'}">
+
+								</div>
                     </div>
                 </div>
+                    </div>
+                <div class="mt20">
+               
                 <div class="item item-text-wrap header" ng-if="image.length>0">
                     <h2>Products Photos</h2>
                 </div>
                 <div class="row">
                     <div class="col input-div" ng-repeat="i in image" ng-click="openpswds($index);">
-                        <div class="img-profile">
-                            <img ng-src="{{i.photo|serverimage}}">
-                        </div>
+
+                        		<div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}">
+
+								</div>
                     </div>
 
                 </div>
+                     </div>
 
-                <div class="padding">
-                    <button class="button button-block button-assertive" ng-click="openPassword();">Reset Password</button>
+                <div class="padding text-center p20">
+                    <button class="button pr-button button-assertive" ng-click="openPassword();">Reset Password</button>
                 </div>
             </div>
         </div>
